# audio_visualizer_tauri

./: .gitignore  README.md
docs/checkpoints/: checkpoint_20251226_063916.md  checkpoint_20251226_064005.md  checkpoint_20251226_064054.md  checkpoint_20251226_064319.md  checkpoint_20251226_075536.md  checkpoint_20251226_102828.md  checkpoint_20251226_102942.md  checkpoint_20251226_225924.md  checkpoint_20251226_232925.md  checkpoint_20251226_234301.md
frontend/: index.html  package-lock.json  package.json  vitest.config.ts  wdio.conf.ts
frontend/docs/checkpoints/: checkpoint_20251226_071543.md  checkpoint_20251226_074838.md
frontend/e2e/: app.spec.ts
frontend/src/: App.svelte
frontend/src-tauri/: Cargo.toml  audio-visualizer.desktop  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/lib/: logger.ts
frontend/src/tests/: App.test.ts  setup.ts
frontend/test/specs/: app.spec.ts  load-audio.spec.ts  load-large-audio.spec.ts  load-very-large-audio.spec.ts
