[package]
name = "audio-visualizer-tauri"
version = "0.1.0"
edition = "2021"
description = "Audio Visualizer with Forensic Analysis"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio processing (optimized for CPU)
symphonia = { version = "0.5", features = ["all"] }
realfft = "3.3"
rayon = "1.10"
parking_lot = "0.12"

# Audio playback
rodio = "0.19"
hound = "3.5"  # WAV file writing

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
tauri-plugin-log = "2"

# Async utilities
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"

# Numeric/DSP utilities
num-traits = "0.2"
num-complex = "0.4"

# Concurrency
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Caching and lazy init
once_cell = "1.19"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# CPU performance optimizations
smallvec = "1.13"        # Stack-allocated small vectors
arrayvec = "0.7"         # Fixed-capacity vectors on stack

[profile.dev]
opt-level = 1  # Faster spectrogram in debug mode

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev mode

[profile.release]
opt-level = 3
lto = "fat"              # More aggressive LTO
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
